[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Quicksand-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Spiel_starten.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 0.0

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.0627451, 0.0627451, 0.0627451, 1, 0.226563, 0.226563, 0.226563, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 4 )
width = 1080

[node name="MainMenu" type="Control"]
margin_right = 720.0
margin_bottom = 1080.0
rect_min_size = Vector2( 720, 1080 )
script = ExtResource( 1 )

[node name="Header" type="Label" parent="."]
anchor_top = 0.049
anchor_right = 0.889
anchor_bottom = 0.049
margin_left = 65.0
margin_top = -0.176003
margin_right = -0.0800171
margin_bottom = 124.824
rect_pivot_offset = Vector2( 1194, 844 )
custom_fonts/font = SubResource( 3 )
text = "Leaping Light"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.09
anchor_top = 0.937
anchor_right = 1.0
anchor_bottom = 0.937
margin_left = 0.199997
margin_top = -178.488
margin_right = -450.0
margin_bottom = 7.51202

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 205.0
margin_bottom = 69.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 205.0
margin_bottom = 142.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "SHOP"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 205.0
margin_bottom = 215.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 544 )
scale = Vector2( 0.666667, 1080.5 )
z_index = -1
texture = SubResource( 2 )

[node name="Copyright" type="Label" parent="."]
anchor_top = 0.049
anchor_right = 0.889
anchor_bottom = 0.049
margin_left = -530.8
margin_top = 261.324
margin_right = 186.12
margin_bottom = 386.324
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 1194, 844 )
custom_fonts/font = SubResource( 3 )
text = "Copyright(c) Maxed Vision 2022"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 4.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="button_up" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_button_up"]
[connection signal="button_up" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
